# vulkan_project

./: CMakeLists.txt  ray_trace_model.blend  ray_trace_model.blend1  raytracing_model.mtl  space_ship_model.txt  vulkan_test.cpp
vulkan_shaders/: compute_ray_tracer.comp  compute_ray_tracer.spv  shader_frag.frag  shader_frag.spv  shader_vert.spv  shader_vert.vert
